fix grid row gap and margin-bottom

--- a/css/general.css
+++ b/css/general.css
@@ -199,10 +199,11 @@ body {
 .grid {
   display: grid;
   column-gap: 6.4rem;
+  row-gap: 9.6rem;
 }
 
 .grid:not(:last-child) {
-  row-gap: 9.6rem;
+  margin-bottom: 9.6rem;
 }
 
 .grid-center--v {
